# ksas-xrocket-hmc

./: .gitignore  .pre-commit-config.yaml  AGENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline_m2_raw_padded.yaml  preprocessing_m2_raw_padded.yaml
configs/experiments/: m3_xrocket_raw_padded.yaml
configs/explanations/: task_1_1_xrocket_raw_padded.yaml  task_1_2_xrocket_raw_padded.yaml  task_1_3_xrocket_raw_padded.yaml
configs/robustness/: m7_raw_padded.yaml
data/: README.md
data/manifests/: ksas_provenance.json  samples.csv
data/manifests/splits/: m2_grouped_fold_diagnostics.csv  m2_grouped_folds.csv  m2_grouped_split_summary.json
data/processed/ksas_m2_raw_padded/: metadata.csv  provenance.json  resolved_config.json  tensor_contract.json  tensors.npz
docs/: Human_Motion_Computing_Lecture_Summary_and_Part_I_Assignment.md  PRD.md  Roadmap.md  ai-use.md  biomechanics.md  data-dictionary.md  decision-log.md  future-project-proposal.md  limitations.md  methodology.md  open-questions.md  reproducibility.md
reports/: README.md  latex_header.tex  references.bib  report_artifacts_manifest.md  technical_report.md
reports/tables/: baseline_aggregate_metrics.csv  task_1_1_answer.md  task_1_2_answer.md  task_1_3_answer.md
results/: README.md
results/audit/: ksas_audit_summary.json  ksas_numeric_ranges.csv
results/baselines/m2_raw_padded/: confusion_matrices.csv  fold_metrics.csv  predictions.csv  provenance.json  resolved_config.json
results/controls/m7_raw_padded/: confound_summary.csv  control_flags.csv  label_shuffle_aggregate_metrics.csv  label_shuffle_metrics.csv  label_shuffle_predictions.csv  leakage_checks.csv  m7_controls_summary.md  metadata_baseline_aggregate_metrics.csv  metadata_baseline_metrics.csv  metadata_baseline_predictions.csv
results/explanations/task_1_1/: ablation_metrics.csv  axis_importance_summary.csv  channel_combination_importance_summary.csv  channel_importance_summary.csv  class_specific_channel_importance.csv  class_specific_sensor_family_importance.csv  family_axis_importance_summary.csv  fold_native_importance.parquet  method_agreement.csv  native_fold_group_importance.csv  permutation_importance.csv  provenance.json  resolved_config.json  sensor_family_importance_summary.csv  stability_rank_correlations.csv  stability_topk_overlap.csv
results/explanations/task_1_2/: class_specific_dilation_importance.csv  class_specific_temporal_scale_importance.csv  dilation_fold_importance.csv  dilation_importance_summary.csv  provenance.json  (+9 more)
src/ksas_xrocket/: __init__.py  audit.py  baselines.py  cli.py  config.py  prepare.py  reporting.py  robustness.py  splits.py  task_1_1_explain.py  task_1_2_explain.py  task_1_3_explain.py  xrocket_adapter.py  xrocket_experiment.py
tests/: test_audit.py  test_m2_pipeline.py  test_m3_pipeline.py  test_robustness.py  test_smoke.py  test_task_1_1_explain.py  test_task_1_2_explain.py  test_task_1_3_explain.py
(+90 files in other folders)
