[project]
name = "ksas-xrocket-hmc"
version = "0.1.0"
description = "Explainable human motion computing with KSAS smartphone IMU data and XROCKET."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "joblib>=1.4",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "seaborn>=0.13",
    "torch>=2.0",
    "xrocket==0.1",
]

[tool.uv.sources]
xrocket = { git = "https://github.com/dida-do/xrocket.git", rev = "1511e810c59d0c42f6431ef2f1f9fa57c71e9b2f" }

[[tool.uv.dependency-metadata]]
name = "xrocket"
version = "0.1"
requires-dist = ["torch>=2.0"]

[project.scripts]
hmc = "ksas_xrocket.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ksas_xrocket"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["joblib", "pandas", "sklearn.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
